static/less/common/article.less
/* Articles generated by CMS */

article div.lede, article span.lede, p.lede {
  font-family: "DTL Nobel" !important;
  font-size: 20px;
  line-height: 1.4;
}

article div.image img, div.widget.carousel img {
  width: 100%;
}

article {

  span.h1, span.h2, span.h3 {
    display: block;
    font-weight: bold;
    margin-bottom: 25px;
    .nobel-font;
  }

  span.h1 {
    .header1;
  }

  @media (max-width: 767px) {
    span.h1 {
      font-size: 30px;
    }
  }

  span.h2 {
    .header2;
  }

  span.h3 {
    .header3;
    margin-bottom: 0;
  }

  .row, .row-fluid {
    margin-top: 0.6em;
    margin-bottom: 0.6em;
  }

  div.content {
    margin-bottom: 20px;
  }

  /* No margins to paragraphs */
  p {
    margin-top: 0;
    margin-bottom: 0;
  }

  div.image {
    position: relative;
    overflow: hidden; // Not really sure if this is needed

    img {
      display: block;
    }
  }

  // Note that img-desc is used for both normal images and the carousel widget
  div.img-desc {
    background-color: rgb(0, 0, 0); /* For older browsers, fall-back to black background */
    background-color: rgba(0, 0, 0, 0.75);
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 4px 12px 10px 12px;
    z-index: 1;

    .font() {
      color: white;
      font-family: "DTL Nobel" !important;
      line-height: 1.3;
    }
    .font;

    span {
      .font;
    }

	/* Fixes image captions on mobile devices. */
  	@media (max-width:767px){	
      position: relative;
      display: block;
	}	
  }
}

/* Old articles */

article.old {
  p {
    margin-top: 10px;
    margin-bottom: 10px;
  }

  div.lede {
    margin-bottom: 25px;
  }

  div.lede, div.lede * {
    font-family: "DTL Nobel" !important;
    font-size: 20px;
    line-height: 1.4;
  }
}

/* Byline */

div.byline {
  border-top: 1px solid rgb(120, 120, 120);
  padding-top: 15px;
  margin-bottom: 30px;

  img {
    float: left;
    margin-right: 10px;
  }

  p {
    margin-top: 0px; /* Vertical center based on the byline image height and text line-height. */
    font-family: "DTL Nobel" !important;
    line-height: 1.2;
  }

  p a.email {
    color: rgb(120, 120, 120);
    font-size: 14px;
  }

  div.multiple-authors {
    float: left;
    margin-right: 20px;
  }
}

